Fix volume bar on Firefox

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -170,6 +170,10 @@ div[id^="plyr-settings-"][id$="-captions"] > div {
     overflow-y: scroll;
 }
 
+.plyr__volume input{
+    min-width: 0;
+}
+
 #videoPlayer {
     background: black;
 }
